# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2024 CERN.
# Copyright (C)      2021 TU Wien.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-accounts
version = attr: invenio_accounts.__version__
description = Invenio user management and authentication.
long_description = file: README.rst, CHANGES.rst
keywords = invenio accounts user role login
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-accounts
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    cryptography>=3.0.0
    Flask-KVSession-Invenio>=0.6.3
    Flask-Security-Invenio>=3.2.0
    invenio-celery>=1.2.3
    invenio-i18n>=2.0.0
    invenio-mail>=1.0.2
    invenio-rest>=1.2.4
    invenio-theme>=2.0.0
    maxminddb-geolite2>=2017.404
    pyjwt>=1.5.0
    simplekv>=0.11.2
    ua-parser>=0.7.3

[options.extras_require]
admin =
    invenio-admin>=1.2.1
postgresql =
    invenio-db[postgresql]>=1.0.14
mysql =
    invenio-db[mysql]>=1.0.14
sqlite =
    invenio-db>=1.0.14
tests =
    mock>=1.3.0
    invenio-app>=1.4.0
    pytest-black>=0.3.0
    pytest-invenio>=2.1.4
    sphinx>=5,<6.0.0

[options.entry_points]
flask.commands =
    roles = invenio_accounts.cli:roles
    users = invenio_accounts.cli:users
invenio_admin.views =
    invenio_accounts_user = invenio_accounts.admin:user_adminview
    invenio_accounts_role = invenio_accounts.admin:role_adminview
    invenio_accounts_session = invenio_accounts.admin:session_adminview
    invenio_accounts_user_identity = invenio_accounts.admin:user_identity_adminview
invenio_base.api_apps =
    invenio_accounts_rest = invenio_accounts:InvenioAccountsREST
invenio_base.apps =
    invenio_accounts_ui = invenio_accounts:InvenioAccountsUI
invenio_base.blueprints =
    invenio_accounts = invenio_accounts.views.settings:create_settings_blueprint
invenio_base.api_blueprints =
    invenio_accounts_rest_auth = invenio_accounts.views.rest:create_rest_blueprint
invenio_base.finalize_app =
    invenio_accounts = invenio_accounts.ext:finalize_app
invenio_celery.tasks =
    invenio_accounts = invenio_accounts.tasks
invenio_db.alembic =
    invenio_accounts = invenio_accounts:alembic
invenio_db.models =
    invenio_accounts = invenio_accounts.models
invenio_i18n.translations =
    messages = invenio_accounts

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[compile_catalog]
directory = invenio_accounts/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_accounts/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_accounts/translations/messages.pot
output-dir = invenio_accounts/translations/

[update_catalog]
input-file = invenio_accounts/translations/messages.pot
output-dir = invenio_accounts/translations/

[pydocstyle]
add_ignore = D401,D202

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_accounts --cov-report=term-missing
# testpaths = tests invenio_accounts
