# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2021 Northwestern University.
# Copyright (C) 2022 RERO.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-db
version = attr: invenio_db.__version__
description = Database management for Invenio.
long_description = file: README.rst, CHANGES.rst
keywords = invenio database
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-db
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    # due to incompatibility on the 1.11 release
    alembic>=1.10.0,<1.11.0
    Flask-Alembic>=2.0.1
    Flask-SQLAlchemy>=2.1,<3.0.0
    invenio-base>=1.2.10
    SQLAlchemy-Continuum>=1.3.12
    SQLAlchemy-Utils>=0.33.1,<0.39
    SQLAlchemy[asyncio]>=1.2.18,<1.5.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    cryptography>=2.1.4
    pytest-invenio>=1.4.5
    Sphinx>=4.5.0
# Left here for backward compatibility
mysql =
    pymysql>=0.10.1
postgresql =
    psycopg2-binary>=2.8.6
versioning =

[options.entry_points]
invenio_base.api_apps =
    invenio_db = invenio_db:InvenioDB
invenio_base.apps =
    invenio_db = invenio_db:InvenioDB

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

; [tool:pytest]
; addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --cov=invenio_db --cov=invenio_db/alembic --cov-report=term-missing
; testpaths = tests invenio_db
