# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2024 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-indexer
version = attr: invenio_indexer.__version__
description = "Record indexer for Invenio."
long_description = file: README.rst, CHANGES.rst
keywords = invenio search indexing
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-indexer
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    invenio-db>=1.0.14,<2.0.0
    invenio-pidstore>=1.2.0,<2.0.0
    invenio-records>=2.0.0,<3.0.0
    pytz>=2016.4

[options.extras_require]
tests =
    pytest-black>=0.3.0
    attrs>=17.4.0
    pytest-invenio>=2.1.0,<3.0.0
    redis>=3.4.0
    sphinx>=4.5
elasticsearch7 =
    # needed: 7.5.0 integrates https://github.com/elastic/elasticsearch-py/pull/1062
    elasticsearch>=7.5.0,<7.14.0
    invenio-search[elasticsearch7]>=2.3.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.3.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.3.0,<3.0.0
# Kept for backwards compatibility
docs =

[options.entry_points]
invenio_base.apps =
    invenio_indexer = invenio_indexer:InvenioIndexer
invenio_base.api_apps =
    invenio_indexer = invenio_indexer:InvenioIndexer
invenio_celery.tasks =
    invenio_indexer = invenio_indexer.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_indexer/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_indexer/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_indexer/translations/messages.pot
output-dir = invenio_indexer/translations/

[update_catalog]
input-file = invenio_indexer/translations/messages.pot
output-dir = invenio_indexer/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --doctest-glob="*.rst" --doctest-modules --cov=invenio_indexer --cov-report=term-missing
# testpaths = docs tests invenio_indexer
# filterwarnings = ignore::pytest.PytestDeprecationWarning
