# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-mail
version = attr: invenio_mail.__version__
description = Invenio-Mail is an integration layer between Invenio and Flask-Mail.
long_description = file: README.rst, CHANGES.rst
keywords = invenio mail
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-mail
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=0.11.1
    Flask-Mail>=0.9.1

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    pytest-invenio>=1.4.0
    Flask-CeleryExt>=0.2.2
    Flask-CeleryExt>=0.2.2
    sphinx>=4.5
# Kept for backwards compatibility
celery =
docs =

[options.entry_points]
invenio_base.apps =
    invenio_mail = invenio_mail:InvenioMail
invenio_base.api_apps =
    invenio_mail = invenio_mail:InvenioMail
invenio_celery.tasks =
    invenio_mail = invenio_mail.tasks

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_mail --cov-report=term-missing
testpaths = tests invenio_mail
filterwarnings = ignore::pytest.PytestDeprecationWarning
