# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-oaiserver
version = attr: invenio_oaiserver.__version__
description = "Invenio module that implements OAI-PMH server."
long_description = file: README.rst, CHANGES.rst
keywords = invenio OAI-PMH
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-oaiserver
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.17.0
    dojson>=1.3.0,<2.0.0
    invenio-base>=1.2.11,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0
    invenio-pidstore>=1.2.2,<2.0.0
    invenio-records>=2.0.0,<3.0.0
    invenio-rest>=1.2.4,<2.0.0
    lxml>=4.3.0

[options.extras_require]
tests =
    coverage>=4.5.3,<5.0.0
    mock>=3.0.0,<4.0.0
    pytest>=4.6.4,<5.0.0
    pytest-cache
    pytest-cov
    pytest-pep8
    pytest-invenio
    responses
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    invenio_oaiserver = invenio_oaiserver:InvenioOAIServer
invenio_base.blueprints =
    invenio_oaiserver = invenio_oaiserver.views.server:blueprint
invenio_base.api_apps =
    invenio_oaiserver = invenio_oaiserver:InvenioOAIServer
invenio_db.alembic =
    invenio_oaiserver = invenio_oaiserver:alembic
invenio_db.models =
    invenio_oaiserver = invenio_oaiserver.models
invenio_admin.views =
    invenio_oaiserver = invenio_oaiserver.admin:set_adminview
    invenio_oaiserver_aa = invenio_oaiserver.admin:set_OAIPMHview
invenio_jsonschemas.schemas =
    oaiserver = invenio_oaiserver.schemas
invenio_pidstore.minters =
    oaiid = invenio_oaiserver.minters:oaiid_minter
invenio_pidstore.fetchers =
    oaiid = invenio_oaiserver.fetchers:oaiid_fetcher

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_oaiserver/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_oaiserver/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_oaiserver/translations/messages.pot
output-dir = invenio_oaiserver/translations/

[update_catalog]
input-file = invenio_oaiserver/translations/messages.pot
output-dir = invenio_oaiserver/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_oaiserver --cov-report=term-missing
# testpaths = tests invenio_oaiserver
# filterwarnings = ignore::pytest.PytestDeprecationWarning
