# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2020 CERN.
# Copyright (C) 2022-2023 Graz University of Technology.
# Copyright (C) 2023 Northwestern University.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-previewer
version = attr: invenio_previewer.__version__
description = Invenio module for previewing files.
long_description = file: README.rst, CHANGES.rst
keywords = invenio previewer
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-previewer
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    charset_normalizer>=3.3.2
    invenio-assets>=1.2.7
    invenio-base>=1.2.10
    invenio-formatter>=1.1.3
    invenio-i18n>=1.3.1
    invenio-pidstore>=1.2.3
    invenio-records-ui>=1.2.0
    mistune>=0.8.1
    nbconvert>=7,<8
    nbformat>=5.1,<6.0
    lxml-html-clean>=0.1.1

[options.extras_require]
tests =
    pytest-black>=0.3.0
    pytest-invenio>=1.4.5
    invenio-app>=1.0.0
    invenio-config>=1.0.3
    invenio-db[versioning]>=1.0.14
    invenio-files-rest>=1.3.2
    invenio-records-files>=1.2.1
    invenio-theme>=1.3.20
    mock>=1.3.0
    sphinx>=4.5
    coverage>=4.5.3,<5.0.0
    pytest-cache
    pytest-cov
    pytest-pep8
    pytest>=4.6.4,<5.0.0
    responses
# Kept for backwards compatibility
docs =
files =
    invenio-files-rest>=1.3.2
    invenio-records-files>=1.2.1

[options.entry_points]
invenio_base.apps =
    invenio_previewer = invenio_previewer:InvenioPreviewer
invenio_i18n.translations =
    messages = invenio_previewer
invenio_assets.webpack =
    invenio_previewer_theme = invenio_previewer.webpack:previewer
invenio_previewer.previewers =
    csv_papaparsejs = invenio_previewer.extensions.csv_papaparsejs
    json_prismjs = invenio_previewer.extensions.json_prismjs
    simple_image = invenio_previewer.extensions.simple_image
    xml_prismjs = invenio_previewer.extensions.xml_prismjs
    mistune = invenio_previewer.extensions.mistune
    txt = invenio_previewer.extensions.txt
    pdfjs = invenio_previewer.extensions.pdfjs
    zip = invenio_previewer.extensions.zip
    ipynb = invenio_previewer.extensions.ipynb
    default = invenio_previewer.extensions.default
    audio_videojs = invenio_previewer.extensions.audio_videojs
    video_videojs = invenio_previewer.extensions.video_videojs
    iiif_presentation = invenio_previewer.extensions.iiif_presentation
    threejs = invenio_previewer.extensions.threejs
invenio_assets.bundles =
    previewer_threejs = invenio_previewer.bundles:threejs

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_previewer/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_previewer/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_previewer/translations/messages.pot
output-dir = invenio_previewer/translations/

[pydocstyle]
add_ignore = D401

[update_catalog]
input-file = invenio_previewer/translations/messages.pot
output-dir = invenio_previewer/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --cov=invenio_previewer --cov-report=term-missing
# testpaths = tests invenio_previewer
