# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2017-2020 CERN.
# Copyright (C) 2022 TU Wien.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-queues
version = attr: invenio_queues.__version__
description = "Invenio module for managing queues."
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-queues
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-celery>=1.2.4
    redis>=3.4.0

[options.extras_require]
tests =
    pytest-black>=0.3.10
    pytest-invenio>=2.1.0,<3.0.0
    Sphinx>=4.5.0
# Kept for backwards compatibility
docs =

[options.entry_points]
flask.commands =
    queues = invenio_queues.cli:queues
invenio_base.apps =
    invenio_queues = invenio_queues:InvenioQueues
invenio_base.api_apps =
    invenio_queues = invenio_queues:InvenioQueues
invenio_i18n.translations =
    messages = invenio_queues

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_queues --cov-report=term-missing
testpaths = docs tests invenio_queues
