# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-records-rest
version = attr: invenio_records_rest.__version__
description = "REST API for invenio-records."
long_description = file: README.rst, CHANGES.rst
keywords = invenio api
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-records-rest
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    bleach>=2.1.3
    ftfy>=4.4.3
    invenio-base>=1.2.5,<2.0.0
    invenio-pidstore>=1.2.1,<2.0.0
    invenio-records>=2.0.0,<3.0.0
    invenio-rest>=1.2.4,<2.0.0
    invenio-indexer>=2.1.0,<3.0.0
    invenio-i18n>=2.0.0,<3.0.0

[options.extras_require]
tests =
    cryptography>=2.1.4
    pytest-black>=0.3.0
    Flask-Login>=0.3.2
    invenio-config>=1.0.2,<2.0.0
    invenio-db[mysql,postgresql]>=1.0.9,<2.0.0
    pytest-invenio>=2.0.0,<3.0.0
    citeproc-py>=0.6.0
    citeproc-py-styles>=0.1.3
    datacite>=1.0.1
    sphinx>=4.5
    dcxml>=0.1.2
    pyld>=1.0.5,<2
    mock>=4
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0
citeproc =
    citeproc-py>=0.6.0
    citeproc-py-styles>=0.1.3
datacite =
    datacite>=1.0.1
docs =
dublincore =
    dcxml>=0.1.2
jsonld =
   pyld>=1.0.5,<2

[options.entry_points]
invenio_base.api_apps =
    invenio_records_rest = invenio_records_rest:InvenioRecordsREST
invenio_base.converters =
    pid = invenio_records_rest.utils:PIDConverter
    pidpath = invenio_records_rest.utils:PIDPathConverter
invenio_base.api_blueprints =
    invenio_records_rest = invenio_records_rest.views:create_blueprint_from_app
invenio_base.api_converters =
    pid = invenio_records_rest.utils:PIDConverter
    pidpath = invenio_records_rest.utils:PIDPathConverter
invenio_i18n.translations =
    messages = invenio_records_rest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_records_rest/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_records_rest/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records_rest/translations/messages.pot
output-dir = invenio_records_rest/translations/

[update_catalog]
input-file = invenio_records_rest/translations/messages.pot
output-dir = invenio_records_rest/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records_rest --cov-report=term-missing
# testpaths = docs tests invenio_records_rest
