# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2022 CERN.
# Copyright (C) 2021      TU Wien.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-records
version = attr: invenio_records.__version__
description = Invenio-Records is a metadata storage module.
long_description = file: README.rst, CHANGES.rst
keywords = invenio metadata
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-records
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    arrow>=0.16.0
    invenio-celery>=1.2.4,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0
    jsonpatch>=1.26
    jsonref>=0.2
    jsonresolver>=0.3.1
    jsonschema>=4.3.0,<5.0.0

[options.extras_require]
tests =
    pytest-black>=0.3.0
    invenio-admin>=1.4.0,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
    responses
admin =
    invenio-admin>=1.2.1,<2.0.0
mysql =
    invenio-db[mysql,versioning]>=1.0.14,<2.0.0
postgresql =
    invenio-db[postgresql,versioning]>=1.0.14,<2.0.0
sqlite =
    invenio-db[versioning]>=1.0.14,<2.0.0
docs =
    # Kept for backwards compatibility

[options.entry_points]
invenio_admin.views =
    invenio_records = invenio_records.admin:record_adminview
invenio_base.apps =
    invenio_records = invenio_records:InvenioRecords
invenio_base.api_apps =
    invenio_records = invenio_records:InvenioRecords
invenio_db.alembic =
    invenio_records = invenio_records:alembic
invenio_db.models =
    invenio_records = invenio_records.models
invenio_i18n.translations =
    messages = invenio_records

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_records/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_records/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_records/translations/messages.pot
output-dir = invenio_records/translations/

[update_catalog]
input-file = invenio_records/translations/messages.pot
output-dir = invenio_records/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

# [tool:pytest]
# addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_records --cov-report=term-missing
# testpaths = tests invenio_records
